--- a/Controls/PluginCompact.xaml
+++ b/Controls/PluginCompact.xaml
@@ -28,15 +28,17 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
-                <Grid Margin="0,0,0,5" Visibility="{Binding DisplayLastest, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Grid Visibility="{Binding DisplayLastest, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0" Height="{Binding Height}" Width="{Binding Height}" VerticalAlignment="Top">
+                    <StackPanel Grid.Column="0" Margin="5,0,5,0"
+                                Height="{Binding Height}" Width="{Binding Height}" VerticalAlignment="Top">
                         <Image Stretch="UniformToFill" Source="{Binding LastestAchievement.Icon, IsAsync=True}"
                                RenderOptions.BitmapScalingMode="Fant">
                             <Image.Style>
@@ -55,19 +57,6 @@
                         </Image>
                     </StackPanel>
 
-                    <!--StackPanel Grid.Column="0" Height="{Binding Height}" Width="{Binding Height}" VerticalAlignment="Top">
-                        <Image Stretch="UniformToFill" Source="{Binding LastestAchievement.Icon, IsAsync=True}"
-                               RenderOptions.BitmapScalingMode="Fant"
-                               Visibility="{Binding LastestAchievement.EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
-                        <Image Stretch="UniformToFill" Source="{Binding LastestAchievement.Icon, IsAsync=True}" 
-                               RenderOptions.BitmapScalingMode="Fant"
-                               Visibility="{Binding LastestAchievement.EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
-                            <Image.Effect>
-                                <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding LastestAchievement.Percent, Converter={StaticResource SetColorConverter}}" />
-                            </Image.Effect>
-                        </Image>
-                    </StackPanel-->
-
                     <!--customs:AchievementImage Grid.Column="0" VerticalAlignment="Top"
                                               Height="{Binding Height}" Width="{Binding Height}"
                                               IsGray="{Binding LastestAchievement.IsGray}" 
@@ -75,9 +64,7 @@
                                               Percent="{Binding LastestAchievement.Percent}"
                                               EnableRaretyIndicator="{Binding LastestAchievement.EnableRaretyIndicator}" /-->
 
-                    <!--customs:AchievementImage AchievementContext="{Binding LastestAchievement}" /-->
-
-                    <Grid Grid.Column="1" Margin="10,0,0,0">
+                    <Grid Grid.Column="2" Margin="10,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
@@ -109,8 +96,11 @@
                     </Grid>
                 </Grid>
 
+                <StackPanel Grid.Row="1" Height="10"
+                            Visibility="{Binding DisplayLastest, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                
                 <Grid Name="PART_ScCompactView" Loaded="PART_ScCompactView_IsLoaded" Margin="0,5,0,0" 
-                      Grid.Row="1" SizeChanged="PART_ScCompactView_SizeChanged" />
+                      Grid.Row="2" SizeChanged="PART_ScCompactView_SizeChanged" />
             </Grid>
         </Border>
     </Grid>
