--- a/Controls/PluginCompactList.xaml
+++ b/Controls/PluginCompactList.xaml
@@ -22,21 +22,17 @@
         <commonpluginsshared:ImageToGrayConverter x:Key="ImageToGrayConverter" />
     </controls:PluginUserControlExtend.Resources>
 
-    <Grid MinHeight="{Binding Height}">
-        <ListBox ItemsSource="{Binding ItemsSource, Mode=OneWay}"  
-                 VirtualizingStackPanel.IsVirtualizing="True" 
-                 VirtualizingStackPanel.VirtualizationMode="Recycling" 
-                 ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <Grid MinHeight="{Binding Height}" Name="PART_GridContener" Tag="{Binding PictureHeight}">
+        <ListBox ItemsSource="{Binding ItemsSource, Mode=OneWay}">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <Grid>
+                                <Grid Margin="2">
                                     <Border Padding="{TemplateBinding Padding}" Background="Transparent">
                                         <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                          Margin="3,0,0,0" />
+                                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                                     </Border>
                                 </Grid>
                             </ControlTemplate>
@@ -52,14 +48,14 @@
 
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <VirtualizingStackPanel Orientation="Horizontal" 
-                                            PreviewMouseWheel="VirtualizingStackPanel_PreviewMouseWheel" />
+                    <VirtualizingStackPanel Orientation="Horizontal" PreviewMouseWheel="VirtualizingStackPanel_PreviewMouseWheel" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="-2,0,0,0" Width="{Binding PictureSize}" Height="{Binding PictureSize}">
+                    <Grid Height="{Binding ElementName=PART_GridContener, Path=Tag}"
+                          Width="{Binding ElementName=PART_GridContener, Path=Tag}">
                         <StackPanel ToolTip="{Binding NameWithDateUnlock}" Margin="2">
                             <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant">
                                 <Image.Style>
