--- a/Views/SuccessStorySettingsView.xaml
+++ b/Views/SuccessStorySettingsView.xaml
@@ -190,16 +190,23 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="30" />
-                                <RowDefinition Height="30" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="10" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="10" />
+                                <RowDefinition Height="auto" />
                             </Grid.RowDefinitions>
 
-                            <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Settings.EnableRaretyIndicator}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Settings.EnableRaretyIndicator}">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableRaretyIndicator}" />
                             </CheckBox>
 
-                            <CheckBox Grid.Column="0" Grid.Row="1" IsChecked="{Binding Settings.EnableOneGameView}" VerticalAlignment="Center">
+                            <CheckBox Grid.Column="0" Grid.Row="2" IsChecked="{Binding Settings.EnableOneGameView}">
                                 <Label Content="{DynamicResource LOCSuccessStoryEnableOneGameView}" />
+                            </CheckBox>
+
+                            <CheckBox Grid.Column="0" Grid.Row="4" IsChecked="{Binding Settings.Auto100PercentCompleted}">
+                                <Label Content="{DynamicResource LOCSuccessStoryEnableAuto100PercentCompleted}" />
                             </CheckBox>
                         </Grid>
 
